# SAP-automation

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: default.yaml
sap_automation/: __init__.py  __main__.py  cli.py  main.py  orchestrator.py
sap_automation/core/: __init__.py  base_transaction.py  checks.py  compatibility.py  config.py  connection.py  doctor.py  exceptions.py  logger.py  precheck.py  retry.py  support.py
sap_automation/transactions/: __init__.py  va23_display_quotation.py
sap_automation/utils/: __init__.py  excel_reader.py  exporter.py  windows_dialog.py
scripts/: create_example_input.py
tests/: test_base_transaction.py  test_cli.py  test_config.py  test_connection.py  test_excel_reader.py  test_exceptions.py  test_exporter.py  test_logger.py  test_orchestrator.py  test_retry.py  test_va23.py
